# P4_Classifiez_automatiquement_des_informations

./: .gitignore  README.md  README_converti.md  main.py  pyproject.toml
data/processed/: df_central.csv
notebooks/: 01_eda_attrition.ipynb  02_preparation_modelisation.ipynb  03_premiers_modeles_classification.ipynb  04_amelioration_classification.ipynb  05_optimisation_interpretation.ipynb
reports/presentation/: Etape_6_Formalisation_Resultats_Attrition_v3.pptx
sql/: 01_create_tables.sql  02_load_data.sql  03_check_tables.sql  03_check_tables_compact.sql  04_prepare_data.sql  05_quality_checks.sql  06_load_df_central_reference.sql  07_compare_sql_vs_python.sql  08_advanced_sql_queries.sql
