[project]
name = "p4-classifiez-automatiquement-des-informations"
version = "0.1.0"
description = "Projet OpenClassrooms P4 - Analyse des causes d'attrition au sein d'une ESN"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "black>=26.3.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pd>=0.0.4",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]

[tool.uv]
package = false
